<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <ImageView
        android:id="@+id/background_auth_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@color/black"/>

    <ImageView
        android:id="@+id/sign_in_image_restaurant"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_app"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sign_in_name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go4lunch"
        android:textSize="68sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_image_restaurant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/sign_in_description_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_a_nice_restaurant"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_name_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/facebook"
        android:layout_marginLeft="8dp"
        android:elevation="4dp"
        app:layout_constraintLeft_toLeftOf="@id/sign_in_button_facebook"
        app:layout_constraintTop_toTopOf="@id/sign_in_button_facebook"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_button_facebook"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button_facebook"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/button_facebook"
        android:text="@string/sign_in_with_facebook"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_description_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/google"
        android:layout_marginLeft="8dp"
        android:elevation="4dp"
        app:layout_constraintLeft_toLeftOf="@id/sign_in_button_google"
        app:layout_constraintTop_toTopOf="@id/sign_in_button_google"
        app:layout_constraintBottom_toBottomOf="@id/sign_in_button_google"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button_google"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/button_google"
        android:text="@string/sign_in_with_google"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button_facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>