<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailsRestaurantFragment.DetailsRestaurantFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/photo_restaurant_details"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_details"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue_android"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_restaurant_details">

        <TextView
            android:id="@+id/name_restaurant_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:maxWidth="280dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="J'apprécie les fruits au sirop" />

        <TextView
            android:id="@+id/adress_restaurant_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:maxWidth="300dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_restaurant_details"
            tools:text="Pas changer assiette aux fromages" />

        <ImageView
            android:id="@+id/icon_star_rating_details_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_star_rate_24"
            app:layout_constraintLeft_toRightOf="@id/name_restaurant_details"
            app:layout_constraintTop_toTopOf="@id/name_restaurant_details"
            app:layout_constraintBottom_toBottomOf="@id/name_restaurant_details" />

        <ImageView
            android:id="@+id/icon_star_rating_details_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_star_rate_24"
            app:layout_constraintLeft_toRightOf="@id/icon_star_rating_details_1"
            app:layout_constraintTop_toTopOf="@id/name_restaurant_details"
            app:layout_constraintBottom_toBottomOf="@id/name_restaurant_details" />

        <ImageView
            android:id="@+id/icon_star_rating_details_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_star_rate_24"
            app:layout_constraintLeft_toRightOf="@id/icon_star_rating_details_2"
            app:layout_constraintTop_toTopOf="@id/name_restaurant_details"
            app:layout_constraintBottom_toBottomOf="@id/name_restaurant_details" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageButton
        android:id="@+id/check_resto_selected"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:padding="12dp"
        android:src="@drawable/baseline_check_circle_24"
        android:background="@drawable/button_round_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/call_resto_details"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/baseline_call_24"
        android:text="@string/call"
        android:textColor="@color/blue_android"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_details" />

    <Button
        android:id="@+id/like_resto_details"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/baseline_star_like_24"
        android:text="@string/like"
        android:textColor="@color/blue_android"
        app:layout_constraintLeft_toRightOf="@id/call_resto_details"
        app:layout_constraintRight_toLeftOf="@id/website_resto_details"
        app:layout_constraintTop_toBottomOf="@+id/view_details" />

    <Button
        android:id="@+id/website_resto_details"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/baseline_public_24"
        android:text="@string/website"
        android:textColor="@color/blue_android"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_details" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_list_people_resto_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/call_resto_details"
            app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>